src/css/main.scss
@import '_colors.scss';
@import '_nav.scss';
@import '_images.scss';
@import '../fonts/ostrich.scss';

body, html {
  font-family: 'Montserrat', sans-serif;
  background-color: #fff;
  padding: 0;
  height: 100%;
  width: 100%;
  margin: 0;
  color: $text;
}

body {
  overflow-x: hidden;
}

h1 {
  text-align: center;
  font-family: 'Ostrich Sans', 'Oswald', sans-serif;
  font-weight: 900;
  text-transform: uppercase;
}

a {
  font-family: 'Oswald', sans-serif;
  text-transform: uppercase;
  color: #fff;
}

.no-wrap {
  white-space: nowrap;
}

section, footer {
  position: relative;
  display: block;

  &.pad {
    padding: 50px;
  }
}

.right {
  text-align: right;
}

.center {
  text-align: center;
}

.left {
  text-align: left;
}

@keyframes shake {
  10%, 90% {
    transform: rotate(-1deg);
  }

  20%, 80% {
    transform: rotate(1deg);
  }

  30%, 50%, 70% {
    transform: rotate(-2deg);
  }

  40%, 60% {
    transform: rotate(2deg);
  }
}

#corner-box {
  height: 230px;
  width: 280px;
  display: block;
  position: absolute;
  z-index: 2000;
  top: 0;
  padding: 20px;

  &:hover {
    background-color: #fbdea7;
  }

  .plain-logo {
    height: inherit;
    width: inherit;
    display: inline-block;
  }

}

.jumbo {
  overflow: hidden;
  height: 100%;
  min-height: 720px;
  max-height: 1200px;
  padding: 0;

  .bg {
    z-index: 25;
  }

  #spotlights {
    z-index: 50;
  }

  .yelling {
    position: absolute;
    z-index: 100;
    width: 100%;
    height: 500px;
    text-align: center;
    margin: 0 auto;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);

    .wbw-sign {
      img {
        margin-top: 30px;
        -ms-margin-top: -20px;
      }

      transform: rotate(3deg);
      position: absolute;
      right: 10%;
      bottom: 10%;
      width: 200px;
      height: 200px;
      padding: 20px;

      &:hover {
        animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
      }
    }

    .box {
      font-style: italic;
      width: 400px;
      padding: 10px 25px 20px 20px;
      text-decoration: none !important;
      display: inline-block;
      background-color: #90cac0;
      clip-path: polygon(0px 400px, 320px 400px, 400px 0px, 80px 0px);

      &:hover {
        background-color: #146154;
      }
    }

    span {
      text-transform: uppercase;
      text-align: justify;
      text-align-last: center;
      margin: 0 auto;
      display: block;
      font-size: 2em;
    }

    .day {
      padding-left: 16px;
      font-family: 'Ostrich Sans', sans-serif;
      font-weight: 900;
      font-size: 5em;
      letter-spacing: 3px;
    }

    .date {
      font-family: 'Ostrich Sans', sans-serif;
      font-weight: 600;
      font-size: 4em;
      line-height: 40px;
      letter-spacing: 3px;
    }
  }
}

#about {
  background-color: $secondary;
  margin-top: -70px;
  z-index: 100;

  .left-signs {
    text-shadow: 1px 1px 1px #969696;
    position: absolute;
    top: 25px;
    left: -15px;
    height: inherit;
    width: 25%;
  }

  .right-signs {
    position: absolute;
    right: -15px;
    top: 25px;
    height: inherit;
    width: 25%;
  }

  .about-content {
    margin-left: 25%;
    margin-right: 25%;
    padding-top: 100px;
    padding-bottom: 40px;
    z-index: 200;
    position: relative;
  }
}

.half {
  width: 50%;
  display: inline-block;
}

.band {
  position: relative;
  height: 400px;
  padding: 0 !important;
  text-align: center;
  vertical-align: middle;

  &:hover {
    .shim {
      opacity: 0;
    }
  }

  .logo {
    position: absolute;
    text-align: center;
    height: 100%;
    width: 400px;
    top: 0;
    left: 0;
    right: 0;
    margin: auto;
  }
}

.internal-jumbo {
  padding-top: 200px;
  min-height: 500px;

  h1 {
    font-family: 'Oswald', sans-serif;
    font-weight: 600;
    font-size: 4em;
    line-height: 50px;
    letter-spacing: 7.5px;
  }

}

.call-to-action {
  text-align: center;

  a {
    margin: 20px;
  }
}

#map {
  width: 100%;
  height: 100%;
}

#venue {
  height: 500px;
  padding: 0 !important;
}

footer {
  white-space: nowrap;
  position: relative;

  .col {
    position: relative;
    display: inline-block;
    height: 250px;
    vertical-align: middle;
  }

  .one {
    a {
      width: 25%;
      height: 250px;
      position: absolute;
      top: 30%;
      left: 0;
    }

    width: 25%;
  }

  .two {
    a {
      width: 100%;
      height: 250px;
      position: absolute;
      text-align: center;
      top: 0;
      left: 0;
    }

    width: 50%;
  }

  .three {
    div {
      width: 100%;
      height: 250px;
      position: absolute;
      top: 15%;
    }

    width: 25%;
  }
}

.social {
  white-space: normal;

  a {
    padding: 5px;
    text-decoration: none !important;

    &:hover {
      color: #bd8e8e;
    }
  }
}

.internal {
  .jumbo {
    height: auto;
    max-height: none;
    padding-top: 200px;
  }
  .collapsed {
    background-color: $compliment;
    top: 0;
    display: block;
  }
  h1 {
    text-shadow: 1px 1px 1px #313131;
    display: block;
    position: relative;
    z-index: 200;
    text-align: center;
    font-family: Roboto, sans-serif;
  }
}

.sponsors {
  ul {
    position: relative;
    list-style: none;
    z-index: 200;
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    text-align: center;

    li {
      display: inline-block;
      margin: 5px;
      height: 250px;
      border: 2px solid #fff;

      a {
        position:relative;
        width: 100%;
        height: 100%;
        display: block;
        text-shadow: 1px 1px 1px #313131;

        .img {
          display: block;
          width: 100%;
          height: 100%;
          text-align: center;
          position: relative;
          img {
            width: 90%;
          }
        }

        .undercard {
          display: none;
        }

        .undercard, .img .text {
          width: 100%;
          text-align: center;
          margin: 0;
          position: absolute;
          top: 50%;
          -ms-transform: translateY(-50%);
          transform: translateY(-50%);
        }

        &:hover {
          .img {
            display: none;
          }
          .undercard {
            display: block;
          }
        }
      }
    }
  }
}

.nimble-logo {
  &:hover {
    img {
      transform: rotate(10deg);
      animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
    }
  }
}

@media screen and (max-width: 1150px) {
  .box {
    margin-top: 100px;
  }
  .sponsors {
    ul {
      grid-template-columns: 1fr 1fr 1fr;
    }
  }
}

@media screen and (max-width: 800px) {
  h1 {
    text-align: center !important;
  }

  #corner-box {
    width: 175px;
    height: 143px;
  }

  .internal {
    #nav {
      display: none;
    }
  }
  .sponsors {
    ul {
      display: block;
      li {
        display:inline-block;
        width: 80%;
      }
    }
  }

  .jumbo {
    padding-top: 20px;

    .yelling {
      font-size: 1em;
      width: 100%;
      text-align: center;

      span {
        text-align: center !important;
      }
    }
  }

  .about-content {
    text-align: justify;
    margin-left: 15px !important;
    margin-right: 15px !important;
  }

  footer {
    white-space: normal;
    text-align: center;

    .col {
      text-align: center !important;
      width: 100% !important;
    }
  }
}

@media screen and (min-width: 1000px) {
  .hiss {
    background-position-y: -250px !important;
  }
}

@media screen and (max-width: 1000px) {
  .half {
    width: 100% !important;
  }

  .no-wrap {
    white-space: normal !important;
  }
}

@media screen and (min-width: 800px) {
  .jumbo {
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 20px;
  }

  section, footer {
    margin-left: 20px;
    margin-right: 20px;
  }

  .band {
    &:hover {
      .logo {
        width: 600px !important;
      }
    }
  }
}

